[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardrailprobe"
version = "0.1.0"
description = "Self-contained AI guardrail benchmark tool — OWASP LLM Top 10, signed PDF reports, zero framework dependency."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ashutosh Kumar", email = "ashutosh.kumar1089@gmail.com" }
]
keywords = ["guardrails", "llm", "security", "red-team", "owasp", "ai-safety", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "reportlab>=4.0.0",
    "pyhanko>=0.21.0",
    "pyhanko-certvalidator>=0.26.0",
    "cryptography>=41.0.0",
    "spacy>=3.0.0",
]

[project.optional-dependencies]
nemo = [
    "nemoguardrails>=0.9.0",
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-aws>=0.2.0",
    "langchain-community>=0.3.0",
]
guardrails_ai = [
    "guardrails-ai>=0.5.0",
]
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
aws = [
    "boto3>=1.28.0",
]
llamafirewall = [
    "llamafirewall>=0.1.0",
]
llm_guard = [
    "llm-guard>=0.3.0",
]
all = [
    "guardrailprobe[nemo,guardrails_ai,presidio,aws,llamafirewall,llm_guard]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
guardrailprobe = "guardrailprobe.cli:main"

[project.urls]
Homepage = "https://github.com/askuma/guardrailprobe"
Documentation = "https://askuma.github.io/guardrailprobe"
"Bug Tracker" = "https://github.com/askuma/guardrailprobe/issues"
Changelog = "https://github.com/askuma/guardrailprobe/blob/main/CHANGELOG.md"
Methodology = "https://github.com/askuma/guardrailprobe/blob/main/METHODOLOGY.md"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["guardrailprobe"]

[tool.hatch.build.targets.sdist]
include = [
    "/guardrailprobe",
    "/tests",
    "/docs",
    "/benchmarks",
    "hatch_build.py",
    "METHODOLOGY.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
